--- a/main.css
+++ b/main.css
@@ -270,12 +270,12 @@
 }
 /* Images */
 .image-container{
-   padding: 2rem;
+   padding: 5rem;
     border: 1px solid black;
 }
 .responsive-image{
     width: 100%;
-    height: auto;
+    height: 30rem;
     border: 2px solid;
 }
 .circular-image{
@@ -429,7 +429,8 @@
 .nav-item > a{
     text-decoration: none;
     justify-content: space-between;
-    padding-right: 2rem;
+    padding-right: 1.5rem;
+    color: black;
 }
 /* Modal */
 .modal-content{
