--- a/main.css
+++ b/main.css
@@ -452,6 +452,7 @@
     text-align: left;
     padding-left: 1.5rem;
     max-width: 4rem;
+    cursor: pointer;
 }
 .modal-content > button:hover{
     color: red;
