--- a/library.css
+++ b/library.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+/* *{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(250, 250, 245);
+    box-sizing: border-box;
+} */
 
 
 body{
@@ -8,9 +15,10 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(250, 250, 245);
+    background-color: white;
     scroll-behavior: smooth;
     box-sizing: border-box;
+    /* overflow-x: hidden; */
 }
 .navigation{
     width: 100%;
@@ -25,20 +33,19 @@ body{
 
 #lib-container{
     display: grid;
-    grid-template-columns: 0.5fr 3fr;
+    grid-template-columns: 1fr 3fr;
     width: auto;
-}
+} 
 /* sidebar */
 .side-menu{
-   border-right: 1px solid black;
+   /* border-right: 1px solid black; */
     min-width: 10rem;
     display: flex;
     justify-content: center;
     overflow: auto;
 }
 .lib-sidebar{
-    background-color: white;
-    z-index: 99;
+    z-index: 9;
     padding: 1em;
     position: fixed;
     min-width: 5rem;
@@ -57,15 +64,15 @@ a{
     padding-bottom: 10px;
 }
 /* main-bar */
-.lib-main-bar{
+.lib-main-bar{  
     padding: 2em;
     border-left: 1px solid black;
-    width: 100%;
+    width: 60%;
     grid-template-columns: 100%;
 }
 .lib-main-bar > h1{
     margin-bottom: 1em;
-    /* font-variant: small-caps; */
+    font-variant: small-caps;
 }
 pre{
     display: flex;
@@ -74,9 +81,13 @@ pre{
     color: rgba(255, 0, 0, 0.562);
     overflow: auto;
     padding: 1em;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
     height: auto;
+    /* font-size: small; */
 }
+
+
+
 
 
